--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
     networks:
       - book-network
 
+  redis:
+        image: redis:7-alpine
+        container_name: redis_book
+        ports:
+             - "6379:6379"
+        networks:
+            - book-network
+
+
   app:
     image: golang:1.23
     container_name: book-app
@@ -23,6 +32,7 @@ services:
       - DB_USER=bookuser
       - DB_PASSWORD=bookpassword
       - DB_NAME=bookdb
+      - REDIS_ADDR=redis:6379
     working_dir: /app
     volumes:
       - .:/app
@@ -35,6 +45,7 @@ services:
       - "8080:8080"
     depends_on:
       - db
+      - redis
     networks:
       - book-network
 
